# kausrg2

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  build.sh  index.html  package-lock.json  package.json
assets/: main.css
db/: origin.sql  staff.db
src/: data.rs  main.rs  routes.rs  utils.rs
templates/: _layout.html  _list.html  _staff.html  about.html  contact.html  divisions.html  faculty.html  index.html  input.css  mission.html  privacy.html  search.html
templates/divisions/: _division.html  cs.html  gs.html  ns.html  peds.html  pls.html  ts.html  vs.html
