[package]
name = "kausurg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-htmx = "0.7"
rinja = "0.3"
rinja_axum = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }